--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "31337": {
-        "dappazon": {
+        "dappazonContract": {
             "address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
         }
     }
