--- a/.github/workflows/deploy-be-ethereum.yml
+++ b/.github/workflows/deploy-be-ethereum.yml
@@ -3,7 +3,7 @@ name: Deploy Smart Contract to Goerli
 on:
   push:
     branches:
-      - main  # ou o nome da sua branch principal
+      - master  # ou o nome da sua branch principal
 
 jobs:
   deploy-contract:
