--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "npx hardhat test --network hardhat",
+    "test": "npx hardhat test --network hardhat --config hardhat.local.config.js ",
     "eject": "react-scripts eject",
     "deploy": "npx hardhat run ./scripts/deploy.js --network goerli"
   },
