--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "npx hardhat test --network hardhat --config hardhat.local.config.js ",
+    "node": "npx hardhat node  --config hardhat.local.config.js",
+    "deploy-local": "npx hardhat run ./scripts/deploy.js --network localhost  --config hardhat.local.config.js",
+    "test": "npx hardhat test --network hardhat --config hardhat.local.config.js",
     "eject": "react-scripts eject",
     "deploy": "npx hardhat run ./scripts/deploy.js --network goerli"
   },
